Mon Aug 08 03:46:16 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* java/SmokeTest.java,java-swig/SmokeTest.java: Fix
	  MyExpandDecider.accept to really check the passed parameter.

Mon Aug 08 01:19:21 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* php/smoketest.php: Install an error handler so the test fails if
	  there are any errors, warnings, notices, etc.

Mon Aug 08 01:13:40 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* xapian.i: Don't return iterator from C# Next() and Prev() methods by
	  reference as that results in it being eligible for garbage collection
	  while we're still using it.
	* csharp/SmokeTest.cs: Add regression test.

Mon Aug 08 01:07:43 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* lua/docs/examples/simpleexpand.lua,
	  lua/docs/examples/simplematchdecider.lua,
	  lua/docs/examples/simplesearch.lua,lua/docs/index.html,
	  lua/smoketest.lua,lua/util.i: Merge latest Lua changes from Xiaona
	  Han.
	* lua/util.i: Whitespace tweaks.

Mon Aug 08 00:52:16 GMT 2011  Olly Betts <olly@survex.com>

	* lua/docs/examples/simplematchdecider.lua: Actually add new
	  example.

Mon Aug 08 00:48:08 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* lua/smoketest.lua,lua/util.i: Fix whitespace inconsistencies.
	* lua/docs/index.html,lua/smoketest.lua,lua/util.i: Merge latest Lua
	  changes from Xiaona Han.

Sun Aug 07 22:26:22 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* lua/docs/index.html,lua/smoketest.lua,lua/util.i: Merge latest Lua
	  changes from Xiaona Han.
	* lua/smoketest.lua,lua/util.i: Fix whitespace inconsistencies.
	* lua/docs/examples/simplematchdecider.lua: Wrap comment to <80
	  characters.
	* lua/docs/examples/simplematchdecider.lua: New example from Xiaona
	  Han's git repo.
	* lua/docs/index.html: Add link to simplematchdecider.lua.
