@@ -1,3 +1,9 @@
+Mon Aug 08 03:54:07 GMT 2011  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* java/SmokeTest.java,java-swig/SmokeTest.java: Fix == comparisons
+	  with literal strings.
+
 Mon Aug 08 03:46:16 GMT 2011  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
